WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30108
accessibility/media-element.html crashes
https://bugs.webkit.org/show_bug.cgi?id=30108
Summary
accessibility/media-element.html crashes
Simon Fraser (smfr)
Reported
2009-10-05 21:48:50 PDT
Crash here: Thread 0 Crashed: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x000000010077eae7 -[WebViewFactory localizedMediaControlElementString:] + 1120 (WebViewFactory.mm:683) 1 com.apple.WebCore 0x0000000101235a30 WebCore::localizedMediaControlElementString(WebCore::String const&) + 79 (LocalizedStringsMac.mm:729) 2 com.apple.WebCore 0x0000000100b525a2 WebCore::AccessibilityMediaControl::accessibilityDescription() const + 46 (AccessibilityMediaControls.cpp:159) 3 com.apple.WebCore 0x0000000100b60ebf -[AccessibilityObjectWrapper accessibilityAttributeValue:] + 4708 (AccessibilityObjectWrapper.mm:1357) 4 DumpRenderTree 0x00000001000057cd AccessibilityUIElement::description() + 49 (AccessibilityUIElementMac.mm:328) Need to add strings for the fullscreen button.
Attachments
Patch
(5.21 KB, patch)
2009-10-06 13:30 PDT
,
Simon Fraser (smfr)
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-10-06 13:30:04 PDT
Created
attachment 40739
[details]
Patch
Mark Rowe (bdash)
Comment 2
2009-10-06 13:42:30 PDT
Comment on
attachment 40739
[details]
Patch I made some minor comments on IRC. r=me
Simon Fraser (smfr)
Comment 3
2009-10-06 21:33:15 PDT
http://trac.webkit.org/changeset/49206
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug