2009-10-06  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Mark Rowe.

        accessibility/media-element.html crashes (and has incorrect result)
        https://bugs.webkit.org/show_bug.cgi?id=30108

        Fix up the accessibilty label for the newly added fullscreen button,
        and update the test result accordingly.

Canonical link: https://commits.webkit.org/40765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49206 268f45cc-cd09-0410-ab3c-d52691b4dbfc